database/pgAdmin/gen-output/pgadmin.pgadmin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: pgadmin
  type: ClusterIP
