database/pgAdmin/gen-output/pgadmin4.pgadmin.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: pgadmin4
  namespace: pgadmin
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.microspray.io
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pgadmin.microspray.io
    secretName: microspray.io-certs
